--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -8,4 +8,9 @@
         <RootNamespace>GraduationProject.Application</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="7.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    </ItemGroup>
+
 </Project>
