--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "TestDb"
+  },
+  "AuthOptions": {
+    "SecretKey": "GraduationProjectSecretKey",
+    "Issuer": "GraduationProject",
+    "Audience": "GraduationProject"
+  },
   "AllowedHosts": "*"
 }
