--- a/tests/Application.UnitTests/Application.UnitTests.csproj
+++ b/tests/Application.UnitTests/Application.UnitTests.csproj
@@ -7,9 +7,8 @@
 
         <IsPackable>false</IsPackable>
 
-        <AssemblyName>Graduation.Application.UnitTests</AssemblyName>
-
-        <RootNamespace>Graduation.Application.UnitTests</RootNamespace>
+        <AssemblyName>GraduationProject.Application.UnitTests</AssemblyName>
+        <RootNamespace>GraduationProject.Application.UnitTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -30,7 +29,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\Application\Application.csproj" />
+      <ProjectReference Include="..\..\src\Application\Application.csproj" />
     </ItemGroup>
 
 </Project>
