aws options registration

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -8,10 +8,19 @@
   "ConnectionStrings": {
     "DefaultConnection": "TestDb"
   },
-  "AuthOptions": {
+  "Auth": {
     "SecretKey": "GraduationProjectSecretKey",
     "Issuer": "GraduationProject",
     "Audience": "GraduationProject"
+  },
+  "AWS": {
+    "Profile": "default",
+    "Region": "us-west-2",
+    "AccessKeyId": "YOUR_ACCESS_KEY_ID",
+    "SecretAccessKey": "YOUR_SECRET_ACCESS_KEY",
+    "S3": {
+      "BucketName": "YOUR_BUCKET_NAME"
+    }
   },
   "AllowedHosts": "*"
 }
