--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "TestDb"
+    "DefaultConnection": "Data Source=iremotestorage-development.db;"
   },
   "Auth": {
     "SecretKey": "GraduationProjectSecretKey",
@@ -14,12 +14,10 @@
     "Audience": "GraduationProject"
   },
   "AWS": {
-    "Profile": "default",
-    "Region": "us-west-2",
-    "AccessKeyId": "YOUR_ACCESS_KEY_ID",
-    "SecretAccessKey": "YOUR_SECRET_ACCESS_KEY",
+    "Profile": "iremotestorage",
+    "Region": "eu-central-1",
     "S3": {
-      "BucketName": "YOUR_BUCKET_NAME"
+      "BucketName": "iremotestorage"
     }
   },
   "AllowedHosts": "*"
